add: modified grammer rules for truth table and added in a file to house misc. functions related to math

--- a/calc_ii/classnotes/03_05_24.tex
+++ b/calc_ii/classnotes/03_05_24.tex
@@ -1,2 +1,15 @@
-\documentclass[12pt, a4paper]{article}
+\documentclass[12pt, a4paper]{report}
 
+\input{preamble}
+\input{macros}
+\input{letterfonts}
+
+\title{\Huge{Example}Problem Set Example}
+\author{\Huge{Author}}
+\date{}
+
+\begin{document}
+
+\maketitle
+
+\end{document}
